...
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="invite">Invite</string>
    <string name="deck_menu_description">Menu for operations with decks and cards</string>
    <string name="flip_the_card_message">Flip the card</string>
    <string name="number_of_cards">Number of cards: %d</string>
    <string name="card_watched_text">Watched: %d</string>

    <!-- Deck menu -->
    <string name="deck_settings_menu">Settings</string>
    <string name="edit_cards_deck_menu">Edit cards</string>
    <string name="deck_share_menu">Share</string>

    <!-- Deck Sharing -->
    <string name="sharing_imageview_description">Sharing options</string>
    <string name="share_people_textview">People</string>
    <string name="can_edit_text">Can Edit</string>
    <string name="can_view_text">Can View</string>
...
    <string-array name="choose_contact_autocomplete">
        <item>Choose from Contacts…</item>
    </string-array>
    <string name="who_has_access_textview">Who has access</string>
    <string name="invalid_email_address_user_warning">Invalid email address</string>
    <string name="deck_not_shared_user_warning">Deck wasn\'t shared. Please try later</string>
    <string name="offline_sharing_disabled_user_warning">Cannot perform operation when app is offline</string>

    <!-- Navigation Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="communicate_menu">Communicate</string>
    <string name="nav_contact_us">Contact Us</string>
...
    <string name="delete_cards_with_read_access_user_warning">You cannot delete card with a read access.</string>
    <string name="share_cards_with_no_access_user_warning">Only owner of deck can share it.</string>
    <string name="not_all_data_loaded_user_warning">Not all data loaded. Please try later</string>

    <!-- Cards type spinner -->
    <string name="cards_type">Deck Type</string>
    <string-array name="deck_type_spinner">
        <item>Basic</item>
        <item>German</item>
        <item>Swiss</item>
    </string-array>
    <string name="decktype_not_exist_user_message">Deck Type wasn\'t changed</string>

...
    <string name="learn_cards_onboarding_activity_title">Learn</string>
    <string name="learn_cards_onboarding_activity_description">Learn in any place</string>
    <string name="share_with_friends_onboarding_activity">Share decks</string>
    <string name="share_with_friends_onboarding_description">Share decks with friends to learn together</string>

    <!-- Offline -->
    <string name="offline_user_message">You are offline</string>

    <!-- Billing messages -->
    <string name="error_occurred_user_message">Error occurred. Try it later.</string>
    <string name="pay_button">Pay</string>
    <string name="image_icon_sup_dev_content_description">Image</string>
    <string name="pay_button_content_description">Pay Button</string>
...
